# Anthill_CPP

./: CMakeLists.txt  README.md  main.cpp  params.cpp  task.txt
models/: Ant.cpp  Ant.h  Anthill.cpp  Anthill.h  Larva.cpp  Larva.h  Pest.cpp  Pest.h  Policeman.cpp  Policeman.h  QueenAnt.cpp  QueenAnt.h  Soldier.cpp  Soldier.h  Worker.cpp  Worker.h
tests/: test.cpp  test.h
